[package]
name = "rsget"
version = "2.1.1-alpha.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
anyhow = "1.0.79"
clap = { version = "3.2.25", features = ["derive"] }
indicatif = "0.17.7"
openssl = { version = "0.10.62", features = ["vendored"] }
reqwest = "v0.11.23"
tokio = { version = "1.35.1", features = ["macros", "fs", "io-util", "rt-multi-thread"] }
